--- a/14.17.Balls/.gitignore
+++ b/14.17.Balls/.gitignore
@@ -1,5 +1,10 @@
-/.vs/
 /14.17.Balls/
-/14.17.Balls.vcxproj/
-/14.17.Balls.vcxproj.filters/
-/14.17.Balls.vcxproj.user/
+/x64/
+*.vcxproj.user
+*.user
+*.vcxproj.filters
+*.filters
+*.vcxproj
+*.sln
+*.pdb
+*.vs
